--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/manrope": "^5.2.8",
     "@fontsource/space-grotesk": "^5.2.10",
+    "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
     "@mui/x-data-grid": "^8.27.1",
     "axios": "^1.13.5",
     "d3-scale": "^4.0.2",
+    "flag-icons": "^7.5.0",
     "leaflet": "^1.9.4",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
